--- a/res/layout/fragment_stage.xml
+++ b/res/layout/fragment_stage.xml
@@ -38,7 +38,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/lvStage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
