--- a/res/layout/stage_list_item.xml
+++ b/res/layout/stage_list_item.xml
@@ -2,22 +2,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/tvNumStage"
-        android:layout_width="match_parent"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
     
         android:textSize="30dp" />
 
     <TextView
-        android:id="@+id/tvEtudiant"
-        android:layout_width="match_parent"
+        android:id="@+id/tvEtudiantNom"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvEtudiantPrenom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvOrganisation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvMaitreStage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvDateDebut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvDateFin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvDateVisite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    <TextView
+        android:id="@+id/tvVille"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="30dp" />
+    
+    
 
 
 </LinearLayout>
