--- a/res/layout/fragment_stage.xml
+++ b/res/layout/fragment_stage.xml
@@ -40,7 +40,13 @@
         <ListView
             android:id="@+id/lvStage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content" 
+             android:layout_gravity="left"
+        android:choiceMode="singleChoice"
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"        
+        android:listSelector="@drawable/list_selector"
+        android:background="@color/list_background">
         </ListView>
 
     </LinearLayout>
