--- a/res/layout/fragment_modifstage.xml
+++ b/res/layout/fragment_modifstage.xml
@@ -3,8 +3,48 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
-    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tvOrganisation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Organisation :"
+            android:textSize="@dimen/taille30" />
+
+        <Spinner
+            android:id="@+id/spOrganisation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10" >
+
+            <requestFocus />
+
+     </EditText>
+   
+
+    </LinearLayout>
 
 </LinearLayout>
