--- a/res/layout/fragment_stage.xml
+++ b/res/layout/fragment_stage.xml
@@ -36,19 +36,26 @@
         android:layout_height="match_parent"
         android:layout_weight="0.2"
         android:orientation="vertical" >
-
+ <HorizontalScrollView 
+    android:id="@+id/horizontalView" 
+    android:layout_height="match_parent"     
+    android:scrollbars="horizontal|vertical" 
+    android:layout_width="match_parent"     
+>
+        
         <ListView
             android:id="@+id/lvStage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-             android:layout_gravity="left"
-        android:choiceMode="singleChoice"
-        android:divider="@color/list_divider"
-        android:dividerHeight="1dp"        
-        android:listSelector="@drawable/list_selector"
-        android:background="@color/list_background">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/list_background"
+            android:choiceMode="singleChoice"
+            android:divider="@color/list_divider"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector"
+            android:scrollbars="horizontal|vertical" >
         </ListView>
-
+        
+</HorizontalScrollView>
     </LinearLayout>
 
 </LinearLayout>
