--- a/res/layout/fragment_modifstage.xml
+++ b/res/layout/fragment_modifstage.xml
@@ -5,6 +5,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/counter_text_color" >
+
+        <TextView
+            android:id="@+id/tvTitre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Stage"
+            android:textSize="@dimen/taille20" />
+
+        <Button
+            android:id="@+id/btnValider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Valider" />
+
+    </LinearLayout>
+
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
@@ -126,7 +147,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10" >
+            android:ems="10"
+            android:minLines="2"
+        >
 
             <requestFocus />
      </EditText>
@@ -147,7 +170,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10" >
+            android:ems="10"
+            android:minLines="2"
+         >
 
             <requestFocus />
      </EditText>
@@ -157,10 +182,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <TextView
-            android:id="@+id/tvRessouce"
+            android:id="@+id/tvRessource"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ressouces : "
+            android:text="Ressources : "
             android:textSize="@dimen/taille30" />
 
         <EditText
@@ -168,7 +193,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10" >
+            android:ems="10"
+            android:minLines="2"
+          >
 
             <requestFocus />
      </EditText>
@@ -189,7 +216,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10" >
+            android:ems="10"
+            android:minLines="2"
+            >
 
             <requestFocus />
      </EditText>
