--- a/res/layout/stage_list_item.xml
+++ b/res/layout/stage_list_item.xml
@@ -7,56 +7,56 @@
 
     <TextView
         android:id="@+id/tvNumStage"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
     
         android:textSize="30dp" />
 
     <TextView
         android:id="@+id/tvEtudiantNom"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvEtudiantPrenom"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvOrganisation"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvMaitreStage"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvDateDebut"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvDateFin"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvDateVisite"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
     <TextView
         android:id="@+id/tvVille"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
 
         android:textSize="30dp" />
