--- a/res/layout/fragment_modifstage.xml
+++ b/res/layout/fragment_modifstage.xml
@@ -17,7 +17,11 @@
             android:layout_weight="1"
             android:text="Stage"
             android:textSize="@dimen/taille20" />
-
+       <Button
+            android:id="@+id/btnAnnuler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Annuler" />
         <Button
             android:id="@+id/btnValider"
             android:layout_width="wrap_content"
